# skorm

./: Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: display.rs  lib.rs
crates/format/: Cargo.toml
crates/format/src/: lib.rs
crates/parse/: Cargo.toml
crates/parse/src/: lib.rs  ty.rs
crates/store/: Cargo.toml
crates/store/src/: lib.rs  query.rs  store.rs
crates/store/src/query/: schema.rs
crates/store/src/store/: db.rs  named.rs  prefix.rs  schema.rs  sink.rs
crates/store/src/store/named/: input.rs  parse.rs
crates/turtle-parse/: Cargo.toml
crates/turtle-parse/src/: error.rs  lib.rs  parse.rs  ty.rs
crates/turtle-parse/src/parse/: input.rs  productions.rs  terminals.rs
crates/turtle-parse/tests/: cases.rs
crates/turtle-parse/tests/cases/: blank.ron  blank.ttl  list.ron  list.ttl  prefix.ron  prefix.ttl  prefixes.ttl  simple.ron  simple.ttl
crates/turtle-parse/tests/cases/.out/: blank.ron  prefixes.ron
xtask/: Cargo.toml
xtask/src/: lib.rs  main.rs  tasks.rs
xtask/src/tasks/: setup.rs
