[package]
name = "skorm-parse"
version = "0.1.0"
authors = ["Aleksander Heintz <alxandr@alxandr.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5"
lazy_static = "1"
skorm-core = { version = "0.1", path = "../core" }
