[package]
name = "skorm-store"
version = "0.1.0"
authors = ["Aleksander Heintz <alxandr@alxandr.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evitable = "0.5"
im = "15"
itertools = "0.10"
lazy_static = "1.4.0"
nom = "6"
salsa = "0.16"
smallvec = "1"
skorm-core = { version = "0.1", path = "../core" }
skorm-parse = { version = "0.1", path = "../parse" }
skorm-format = { version = "0.1", path = "../format" }
