[package]
name = "skorm-turtle-parse"
version = "0.1.0"
authors = ["Aleksander Heintz <alxandr@alxandr.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.6.0"
evitable = "0.5"
lazy_static = "1"
nom = "6"
rust_decimal = { version = "1", default-features = false }
smallvec = { version="1", features = ["union"] }
string = "0.2"
url = "2"
skorm-parse = { version = "0.1", path = "../parse" }

[dev-dependencies]
serde = { version="1", features = ["rc"] }
ron = "0.6"
glob = "0.3"
datatest = "0.6"
